fix stylle: button from header too big on desktop mode

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -83,7 +83,7 @@ footer {
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 30px;
+    right: 50px;
 }
 .right-head-buttons-parent {
     display: flex;
@@ -100,7 +100,7 @@ footer {
     gap: 10px;
     border: none;
     border-radius: 18px;
-    padding: 12px;
+    padding: 10px;
     background-color: #393939;
 }
 .button-head:hover {
@@ -111,8 +111,8 @@ footer {
     background-color: #252525;
 }
 .button-head-image {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     object-fit: cover;
     filter: invert(1);
 }
